<?xml version="1.0"?>
<package>
  <name>kinfu</name>
  <version>0.0.0</version>
  <description>The kinfu package</description>

  <maintainer email="rimlab@todo.todo">rimlab</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>kinfu_msgs</build_depend>
  <build_depend>pcl_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>kinfu_msgs</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>pcl_msgs</run_depend>
  <run_depend>pcl_conversions</run_depend>

  <export>
  </export>
</package>
