<?xml version="1.0"?>
<package>
  <name>kinfu_output</name>
  <version>0.0.0</version>
  <description>The kinfu_output package</description>

  <maintainer email="rimlab@todo.todo">rimlab</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>kinfu_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <run_depend>kinfu_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>pcl_msgs</run_depend>
  <run_depend>actionlib</run_depend>

  <export>

  </export>
</package>
